--- a/src/app/core/components/navbar/navbar.css
+++ b/src/app/core/components/navbar/navbar.css
@@ -3,6 +3,9 @@
   display: block;
   width: 100%;
 }
+nav{
+  z-index: 999999999!important;
+}
 
 /* Dropdown hover delay for better UX */
 .group:hover .group-hover\:visible {
