--- a/src/app/features/metals-calculator/metals-calculator.html
+++ b/src/app/features/metals-calculator/metals-calculator.html
@@ -50,6 +50,7 @@
 </section>
 
 <!-- Gold Calculator Form Section -->
+@defer (on viewport) {
 <section class="calculator-form-section relative py-16 md:py-24 pb-40! ">
     <!-- Video Background -->
     <div class="video-bg-wrapper absolute inset-0 z-0">
@@ -336,3 +337,15 @@
         </form>
     </div>
 </section>
+} @placeholder {
+<section class="calculator-form-section relative py-16 md:py-24 pb-40!">
+    <div class="container mx-auto px-5 lg:px-20 flex justify-center items-center min-h-[500px]">
+        <div class="text-center">
+            <div class="animate-pulse">
+                <div class="w-16 h-16 bg-gray-300 rounded-full mx-auto mb-4"></div>
+                <div class="h-4 bg-gray-300 rounded w-32 mx-auto"></div>
+            </div>
+        </div>
+    </div>
+</section>
+}
