--- a/src/app/shared/components/section-title/section-title.html
+++ b/src/app/shared/components/section-title/section-title.html
@@ -2,7 +2,7 @@
     <div class="flex items-center gap-4 ">
         <img src="/images/title.webp" alt="title-icon">
         @if (title) {
-        <h2 class="font-semibold text-4xl text-[#D0A51A]">{{ title }}</h2>
+        <h2 class="font-semibold text-4xl text-[#996B00]">{{ title }}</h2>
         }
     </div>
 </div>
